Fix picker overflow out of window

--- a/src/ui/ColorSelector.module.css
+++ b/src/ui/ColorSelector.module.css
@@ -20,6 +20,7 @@
   border: solid 1px rgba(0, 0, 0, 0.1);
 }
 .popover {
+  display: inline-block;
   position: absolute;
   z-index: 2;
 }
@@ -29,4 +30,7 @@
   right: 0px;
   bottom: 0px;
   left: 0px;
+}
+.alignBottom {
+  bottom: 0px;
 }
